# feedwake

./: AGENTS.md  Cargo.toml  README.md
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
config/: feedwake.example.toml
src/: app.rs  config.rs  delivery.rs  feed.rs  filter.rs  lib.rs  main.rs  openclaw.rs  state.rs
tests/: app_batch_delivery.rs  cli.rs  delivery_http.rs  feed_parsing.rs  filtering.rs  openclaw_setup.rs  state_delivery.rs
