[package]
name = "feedwake"
version = "0.0.10"
edition = "2021"

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5", features = ["derive"] }
feed-rs = "2.3"
getrandom = "0.2"
json5 = "0.4"
regex = "1.11"
rusqlite = { version = "0.32", features = ["bundled", "chrono"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
percent-encoding = "2"
toml = "0.8"
toml_edit = "0.22"
ureq = { version = "2.12", features = ["json"] }
url = "2"

[dev-dependencies]
tempfile = "3.14"
tiny_http = "0.12"

[profile.release]
codegen-units = 1
lto = true
opt-level = "z"
panic = "abort"
strip = true
